[package]
name = "git-igitt"
version = "0.1.16"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
description = "Interactive Git terminal application to browse and visualize Git history graphs arranged for your branching model"
repository = "https://github.com/mlange-42/git-igitt.git"
keywords = ["git", "graph"]
license = "MIT"
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[features]
default = ["crossterm"]

[dependencies]
git2 = { version = "0.13", default-features = false, optional = false }
crossterm = { version = "0.19", optional = true }
tui = { version = "0.14", default-features = false, optional = false, features=["crossterm"] }
unicode-width = "0.1"
muncher = "0.6"
itertools = "0.10"
clap = {version = "2.33", optional = false}
platform-dirs = "0.3"
yansi = "0.5"
toml = "0.5"
lazy_static = "1.4"
syntect = "4.5"
textwrap = {version = "0.13", default-features = false, optional = false, features = ["unicode-width"]}
git-graph = "0.5.1"
