[package]
name = "git-igitt"
version = "0.1.18"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
description = "Interactive Git terminal application to browse and visualize Git history graphs arranged for your branching model"
repository = "https://github.com/mlange-42/git-igitt.git"
keywords = ["git", "graph"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.83.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[features]
default = ["crossterm"]

[dependencies]
git2 = { version = "0.15", default-features = false, optional = false }
crossterm = { version = "0.29", optional = true }
tui = { version = "0.19", default-features = false, optional = false, features = [
	"crossterm",
] }
unicode-width = "0.2"
muncher = "0.7"
itertools = "0.14"
clap = { version = "4.5", optional = false }
platform-dirs = "0.3"
yansi = "1.0"
toml = "0.9"
lazy_static = "1.4"
syntect = "5.0"
textwrap = { version = "0.16", default-features = false, optional = false, features = [
	"unicode-width",
] }
git-graph = "0.5.3"
log4rs = "1.2.0"
log = "0.4.18"
